Actually staging the changes this time